# daida-ai

./: .gitignore  README.md  README_JA.md  README_KO.md  README_ZH.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/daida-ai/: SKILL.md
daida_ai/: __init__.py
daida_ai/lib/: audio_embed.py  audio_utils.py  outline_parser.py  pronunciation_dict.py  slide_builder.py  slide_spec.py  slideshow.py  svg_convert.py  synthesize.py  talk_script.py  template_builder.py  tts_edge.py  tts_elevenlabs.py  tts_engine.py  tts_openai.py  tts_voicevox.py  video_builder.py
docs/: evaluation.md  tts-pronunciation-dict-spec.md  tts-script-export-spec.md
samples/: presentation.pptx
skills/daida-ai/: SKILL.md
skills/daida-ai/assets/: pronunciation_dict.tsv
skills/daida-ai/references/: tts-plugins.md
skills/daida-ai/scripts/: create_slides.py  embed_audio.py  enrich_outline.py  export_tts_script.py  generate_image.py  generate_outline.py  make_slideshow.py  setup.sh  svg_to_png.py  (+2 more)
skills/relief-pitcher-ai/: SKILL.md
tests/: conftest.py  test_audio_embedding.py  test_cli_tts_script.py  test_e2e_pipeline.py  test_enrich_outline.py  test_generate_image.py  test_outline_parser.py  test_pptx_robustness.py  test_pronunciation_dict.py  test_slide_builder.py  test_slide_spec_validation.py  test_slideshow.py  test_svg_font_validation.py  test_svg_to_png.py  test_synthesize_audio.py  test_talk_script.py  test_template_builder.py  test_tts_elevenlabs.py  test_tts_engine.py  test_tts_openai.py  test_tts_script_io.py  test_video_builder.py
(+28 files in other folders)
