[project]
name = "daida-ai"
version = "0.3.0"
description = "LT presentation auto-generation Agent Skill"
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=1.0.0",
    "edge-tts>=6.1.0",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.1; python_version >= '3.13'",
    "Pillow>=10.0.0",
    "defusedxml>=0.7.0",
]

[project.optional-dependencies]
voicevox = ["httpx>=0.27.0"]
elevenlabs = ["httpx>=0.27.0"]
openai = ["httpx>=0.27.0"]
svg = ["cairosvg>=2.7.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "cairosvg>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["daida_ai*"]

[tool.setuptools.package-data]
daida_ai = ["assets/*.pptx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring external tools (ffmpeg, LibreOffice)",
]
